--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@tabler/icons-react": "^2.47.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
