--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.5",
     "@tabler/icons-react": "^2.47.0",
+    "bcryptjs": "^2.4.3",
+    "firebase": "^10.8.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
