--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-data-grid": "^6.19.5",
     "@tabler/icons-react": "^2.47.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^3.3.1",
     "firebase": "^10.8.0",
     "next": "14.1.0",
     "react": "^18",
