--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
+    "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^6.19.5",
     "@tabler/icons-react": "^2.47.0",
+    "@types/chart.js": "^2.9.41",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
     "firebase": "^10.8.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.12.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
