created service function to fetch soccer data and display it

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-data-grid": "^6.19.5",
     "@tabler/icons-react": "^2.47.0",
     "@types/chart.js": "^2.9.41",
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
