--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
     "firebase": "^10.8.0",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.7.0",
+    "firebase-tools": "^13.4.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.12.1"
+    "recharts": "^2.12.1",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
