--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1"
   },
@@ -27,7 +28,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
-    "typescript": "^4.9.0"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
