--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "recharts": "^2.12.1",
     "sharp": "^0.33.2"
   },
