--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@firebase/firestore": "^4.4.3",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "firebase": "^10.8.1",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1"
   },
