--- a/wagr-microservices/trade/Cargo.toml
+++ b/wagr-microservices/trade/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 rust_decimal = "1.34"
 rust_decimal_macros = "1.34"
+tokio = { version = "1", features = ["full"] }
+mongodb = "2.8.1"
+dotenv = "0.15.0"
+envy = "0.4.2"
+bson = "2.0.0" 
